--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4431,6 +4431,7 @@ en:
         message: Message
         notification_number: Notification#
         parking_notification: Parking Notification
+        retrieved: Retrieved
       table:
         address: Address
         bike: Bike
@@ -4439,6 +4440,7 @@ en:
         impounded: Impounded
         kind: Because
         notification_number: Notification#
+        retrieved: Retrieved
     stickers:
       edit:
         bike: Bike
