Parking Notification includes retrieval link (#1548)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4439,6 +4439,7 @@ en:
         impounded: Impounded
         kind: Because
         notification_number: Notification#
+        retrieved: Retrieved
     stickers:
       edit:
         bike: Bike
