--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2085,7 +2085,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2111,7 +2111,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
@@ -3690,7 +3690,7 @@ en:
       multi_serial_search: Multi serial search
       org_bikes: "%{org_name} Bikes"
       org_dashboard: "%{org_name} Dashboard"
-      org_impounded_bikes: "%{org_name} Impounded Bikes"
+      impounded_bikes: Impounded Bikes
       org_locations: "%{org_name} locations"
       org_profile: "%{org_name} profile"
       parking_notification_unregistered: New unregistered notification
