--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2072,7 +2072,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -2098,7 +2098,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -3667,6 +3667,7 @@ en:
       exports: Exports
       getting_started: Getting started
       help: Help
+      impounded_bikes: Impounded Bikes
       incomplete_registrations: Incomplete registrations
       lightspeed_integration_panel: Lightspeed Integration Panel
       log_in: log in
@@ -3674,7 +3675,6 @@ en:
       multi_serial_search: Multi serial search
       org_bikes: "%{org_name} Bikes"
       org_dashboard: "%{org_name} Dashboard"
-      impounded_bikes: Impounded Bikes
       org_locations: "%{org_name} locations"
       org_profile: "%{org_name} profile"
       parking_notification_unregistered: New unregistered notification
@@ -4347,6 +4347,11 @@ en:
         unable_to_export: Unable to export, not part of your organization
         unassign_stickers: Unassign stickers
         view_avery_labels: View Avery Labels
+    impound_records:
+      index:
+        search_bike_descriptions: Search bike descriptions
+        search_for_serial_number: Search for serial number
+        search_owner_email: Search owner email
     manages:
       location_fields:
         address: Address
