--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3667,6 +3667,7 @@ en:
       exports: Exports
       getting_started: Getting started
       help: Help
+      impounded_bikes: Impounded Bikes
       incomplete_registrations: Incomplete registrations
       lightspeed_integration_panel: Lightspeed Integration Panel
       log_in: log in
@@ -3674,7 +3675,6 @@ en:
       multi_serial_search: Multi serial search
       org_bikes: "%{org_name} Bikes"
       org_dashboard: "%{org_name} Dashboard"
-      org_impounded_bikes: "%{org_name} Impounded Bikes"
       org_locations: "%{org_name} locations"
       org_profile: "%{org_name} profile"
       parking_notification_unregistered: New unregistered notification
@@ -4347,6 +4347,11 @@ en:
         unable_to_export: Unable to export, not part of your organization
         unassign_stickers: Unassign stickers
         view_avery_labels: View Avery Labels
+    impound_records:
+      index:
+        search_bike_descriptions: Search bike descriptions
+        search_for_serial_number: Search for serial number
+        search_owner_email: Search owner email
     manages:
       location_fields:
         address: Address
@@ -4389,7 +4394,7 @@ en:
         search_bike_descriptions: Search bike descriptions
         search_for_serial_number: Search for serial number
         search_owner_email: Search owner email
-      show:
+      show_details:
         address: Address
         bike: Bike
         by: Created by
@@ -4397,7 +4402,6 @@ en:
         internal_notes: Internal notes
         message: Message
         notification_number: Notification#
-        parking_notification: Parking Notification
       table:
         address: Address
         bike: Bike
