--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -5074,15 +5074,22 @@ nl:
       multiple_serial_search_pane: Meervoudig serieel zoekvenster
       thank_you: Heel erg bedankt voor het gebruik van Bike Index!
       thanks_for_using_bike_index: Bedankt voor het gebruik van Bike Index!
-    stolen_missing_location_modal:
+    user_general_alert:
       add_location_theft_bike_title_html: Voeg de locatie van de diefstal van uw <strong>%{bike_title}
         toe</strong>
+      add_photo_theft_bike_title_html: Voeg een foto toe aan je <strong>%{bike_title}</strong>
       location_critical_html: "<strong>Het is van cruciaal belang voor herstel</strong>
         dat u het adres of kruispunt opgeeft waar uw %{bike_type} is gestolen."
+      missing_stolen_photo_title: Voeg een foto toe
+      photo_critical_html: Succesvolle gepromote waarschuwingen <strong>moeten een
+        afbeelding hebben</strong>
       stolen_missing_location_title: Voeg diefstallocatie toe
       without_location_all_is_lost: Zonder een locatie kunnen we het woord over de
         diefstal niet verspreiden en mensen zullen niet weten waar ze naar uw %{bike_type}
         moeten zoeken.
+      without_photo_all_is_lost: Als je geen foto's van je fiets hebt, zoek dan een
+        stockafbeelding op internet en upload deze. Zonder een afbeelding is de gepromote
+        waarschuwing niet effectief.
   users:
     accept_terms:
       i_agree_to_tos_html: Ik ga akkoord met de <strong>Servicevoorwaarden van</strong>
