--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4999,15 +4999,21 @@ en:
       to: To
       update: Update
       year: year
-    stolen_missing_location_modal:
+    user_general_alert:
       add_location_theft_bike_title_html: Add the location of the theft of your <strong>%{bike_title}</strong>
+      add_photo_theft_bike_title_html: Add a photo to your <strong>%{bike_title}</strong>
       location_critical_html: >-
         <strong>It is critical for recovery</strong> that you include the address
         or cross-street where your %{bike_type} was stolen.
+      missing_stolen_photo_title: Please add a photo
+      photo_critical_html: Successful promoted alerts <strong>need to have an image</strong>
       stolen_missing_location_title: Please add theft location
       without_location_all_is_lost: >-
         Without a location we can't spread the word about the theft and people won't
         know where to look for your %{bike_type}.
+      without_photo_all_is_lost: >-
+        If you don't have any photos of your bike, find a stock image on the internet
+        and upload it. Without some image, the promoted alert won't be effective.
   stolen:
     index:
       ambassador: ambassador
