--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3657,6 +3657,7 @@ en:
       about: About
       add_a_bike: Add a bike
       blog: Blog
+      customize_emails: Customize emails
       discuss: Discuss
       donate: Donate
       exports: Exports
@@ -4955,6 +4956,7 @@ en:
       ascend_imports: Ascend Imports
       bikes: Bikes
       bulk_imports: Bulk Imports
+      customize_emails: Customize emails
       discuss: Discuss
       exports: Exports
       getting_started: Getting started
