--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4462,19 +4462,25 @@ en:
         invite_more_users: Invite more users
         is_admin: Admin?
         manage_users: Manage Users
+        manually_invite_email: manually invite emails
         remaining_invites_html: You can add <strong>%{invitations_count}</strong>
           more
         sender: Sender
         to: To
         update_email: Update email
         user: user
+        whitelisted_domain_info_html: >-
+          You have a whitelisted domain, anyone signing up with an email address ending
+          in <code>%{email_suffix}</code> will be a member of %{org_name}.
+        you_can_also: You can also
         you_have_invited_html: 'You have invited: <strong>%{users_count}</strong>'
       new:
         1_email_per_line: 1 email per line
         admin_of_organization: Admin of organization
         automatic_passwordless: >-
-          Your organization is set up with automatic passwordless log in. The Emails
-          you add will receive a message with a link to sign in.
+          Your organization is set up with automatic passwordless log in. Emails you
+          invite will be able to sign in by using the "Emailed sign in link" button
+          on the sign in page.
         email_youre_inviting: Email you're inviting
         invite_multiple_emails: Invite multiple emails
         invite_user: Invite user
@@ -4485,7 +4491,11 @@ en:
         remaining_invites_html: You can add <strong>%{invitations_count}</strong>
           more
         send_invitation: Send invitation
+        signing_in_with_whitelisted_html: >-
+          Signing in with an "Emailed sign in link" using an address that ends with
+          <code>%{email_suffix}</code> will automatically make you a member of %{org_name}.
         user: user
+        you_have_a_whitelisted_domain: You have a whitelisted domain
         you_have_invited_html: 'You have invited: <strong>%{users_count}</strong>'
   organized_mailer:
     custom_message:
