--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -973,8 +973,11 @@ en:
       how_did_you_get_it_back: How did you get it back?
       its_also_how_we_get_better_at_recovering: It's also how we get better at recovering
         bikes.
+      mark_graduated_resolved: Mark %{bike_type} remaining
+      mark_parking_resolved: Mark %{bike_type} retrieved
       mark_recovered: Mark recovered
       nevermind: Nevermind
+      no_futher_action_necessary: no further action necessary!
       no_one_can_see_it_but_you: No one can see it but you
       please_tell_us_how_you_got_your_bike: Please tell us how you got your %{bike_type}
         back, we really care!
@@ -986,6 +989,9 @@ en:
         was stolen.
       when_did_you_recover_it: When did you recover it?
       whoa_this_awesome_bike_type_is_yours: Whoa, this awesome %{bike_type} is yours!
+      you_have_already_marked_remaining: You have already marked this %{bike_type}
+        remaining
+      you_have_already_marked_resolved: You have marked this notification resolved
       you_sent_this_bike_html: >-
         You sent this %{bike_type} to <em>%{owner_email}</em> and it hasn't been claimed
         yet. You can update it.
@@ -1524,6 +1530,15 @@ en:
           incorrect_token: Incorrect Token, check your email again
         update:
           bike_recovered: Bike marked recovered! Thank you!
+      resolve_token:
+        marked_remaining: "%{bike_type} marked remaining!"
+        marked_retrieved: "%{@bike_type} marked retrieved!"
+        notification_already_retrieved: That %{bike_type} has already been marked
+          retrieved!
+        notification_impounded: That %{bike_type} has been impounded! Contact %{org_name}
+          to retrieve it.
+        unable_to_find_graduated_notification: Unable to find that Graduated Notification!
+        unable_to_find_parking_notification: Unable to find that Parking Notification!
       scanned:
         unable_to_find_sticker: 'Unable to find sticker: %{scanned_id}'
       update:
