--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1626,6 +1626,11 @@ en:
       bikes:
         update:
           unknown_update_action: Unknown update action. Please contact support@bikeindex.org
+      hot_sheets:
+        ensure_access_to_hot_sheet!:
+          org_does_not_have_access: >-
+            Your organization doesn't have access to that, please contact Bike Index
+            support.
       bulk_imports:
         create:
           bulk_import_created: Bulk Import created!
@@ -2094,7 +2099,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2120,7 +2125,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
@@ -3685,6 +3690,8 @@ en:
       add_a_bike: Add a bike
       blog: Blog
       customize_emails: Customize emails
+      hot_sheet: Hot Sheet
+      hot_sheet_configuration: Hot Sheet configuration
       discuss: Discuss
       donate: Donate
       exports: Exports
@@ -5005,6 +5012,8 @@ en:
       ascend_imports: Ascend Imports
       bikes: Bikes
       bulk_imports: Bulk Imports
+      hot_sheet: Hot Sheet
+      hot_sheet_configuration: Hot Sheet config
       customize_emails: Customize emails
       discuss: Discuss
       exports: Exports
